# SDL2Learn

./: .gitignore  README.md
Cplus-Game-Tutorial/: delete_multiple_directory.py
Cplus-Game-Tutorial/Chapter1/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter10/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter2/: Dungeon.sln  Dungeon.vcxproj
Cplus-Game-Tutorial/Chapter3/: Dungeon.sln  Dungeon.vcxproj
Cplus-Game-Tutorial/Chapter4/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter5/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter6/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter7/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter8/: Dungeon.sln  Dungeon.vcxproj  Dungeon.vcxproj.filters
Cplus-Game-Tutorial/Chapter9/: Dungeon.sln  Dungeon.vcxproj
CrossPlatformCCourse2020/: .gitignore  LICENSE  README.md
CrossPlatformCCourse2020/CustomCursor/: CMakeLists.txt  Resource.c  main.c
CrossPlatformCCourse2020/DragRect/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/DrawBalls/: Ball.c  CMakeLists.txt  Resource.h  main.c
CrossPlatformCCourse2020/DrawLines/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/DrawRedRect/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/DrawText/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/FixedFrameRate/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/FlipAndRotate/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/FollowCursor/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/FramedAnimation/: CMakeLists.txt  Resource.c  Resource.h  WalkAnimation.c  WalkAnimation.h
CrossPlatformCCourse2020/HelloWorld/: CMakeLists.txt
CrossPlatformCCourse2020/InCircle/: CMakeLists.txt  DisplayObject.c  Eyeball.h  Resource.c  main.c
CrossPlatformCCourse2020/InRect/: CMakeLists.txt  RectInRect.c  RectInRect.h  main.c
CrossPlatformCCourse2020/LoadBMP/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/LoadImage/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/ModifyPixes/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/MouseEvents/: CMakeLists.txt  main.c
CrossPlatformCCourse2020/MoveBalls/: Ball.c  Ball.h  CMakeLists.txt  Resource.c  main.c
CrossPlatformCCourse2020/OnALine/: CMakeLists.txt  DisplayObject.c  Resource.c  (+1 more)
LearnSDL2/: .gitignore  LICENSE  README.md
LinuxSDL2Learn/: 1.txt
LinuxSDL2Learn/LinuxSDL2Game/pacman-SDL2/: .gitignore  CMakeLists.txt
LinuxSDL2Learn/LinuxSDL2Game/pacman-SDL2/cmake/: copydll.cmake
LinuxSDL2Learn/LinuxSDL2Game/pacman-SDL2/include/: context.hpp  controller.hpp  find_path.hpp  game_context.hpp  map.hpp  pch.hpp  renderer.hpp
LinuxSDL2Learn/LinuxSDL2Game/pacman-SDL2/src/: context.cpp  game_context.cpp  main.cpp  map.cpp  monster.cpp  renderer.cpp  window.cpp
SDL_Learn/: CMakeLists.txt  README.md
WinSDL2Learn/: .gitignore  Readme.md
WinSDL2Learn/WinSDL2Game/Chaos_Dungeon_Windows/Chaos_Dungeon_Windows_x64/test/: CMakeLists.txt  tAABBvsAABB.cpp  tAABBvsCircle.cpp  tCirclevsCircle.cpp  tOBBvsOBB.cpp  tmath.cpp
WinSDL2Learn/WinSDL2Part2/Chapter5/08_gtk-hello/: CMakeLists.txt  build.bat  cmake_mingw32-make_build.bat  main.c  main.cpp
kys-cpp/: .gitignore  .gitmodules  LICENSE  get-submodule.sh  kys.sln  readme.md
(+3160 files in other folders)
