cmake_minimum_required(VERSION 3.13)
project(gtk-hello)

set(CMAKE_C_STANDARD 11)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

add_definitions(${GTK3_CFLAGS_OTHER})

ADD_EXECUTABLE(gtk_hello main.c)
TARGET_LINK_LIBRARIES(gtk_hello ${GTK3_LIBRARIES})

install(TARGETS gtk_hello DESTINATION bin)